# aki7proj

./: .gitignore  .ycm_extra_conf.py  MANIFEST.in  pixi.toml  pyproject.toml  pytest.ini  setup.py
answers/: ans_random.py
assets/: pboc_fields.csv  pboc_parts.csv  pbocv1_sample.json
assets/autofin/: autofin_mock_20241101.xlsx  infocode_mapper.xlsx
assets/pboc_reports/: 2024042619142641685791_with_housing_fund.json  2024042814471493385547_with_housing_fund.json  2024052913530889884813_with_company_recs.json  2024063010214932885545_with_lasting_ovd.json  2024070214045492487519_with_company_recs.json
assets/pboc_settings/: pboc_utf8.json
azkaban/: pboc_aggs.py  pboc_conf.py  rule_engine.py  tag_analysis.py
contrib/: cashflow.py  echarts.py  jieba.py  networkx.py  xgbflow.py
contrib/answers/: ans_bits.py  ans_random.py  ans_scalar.py
contrib/torch/: autoptim.py  deepfm.py  torchflow.py
examples/: autofin.py  candlestick.py  cashflow.py  pboc.py
flagbear/: executor.py  exgine.py  finarr.py  fliper.py  graph.py  lex.py  parser.py  patterns.py  syntax.py  tree.py
flagbear/const/: patterns.py  prods.py  tokens.py
flagbear/llp/: autom.py  lex.py  parser.py  patterns.py  syntax.py
flagbear/slp/: db.py  finer.py  pdsl.py
flagbear/str2/: dtyper.py  fliper.py
modsbear/: chnwords.py  exgine.py  manidf.py  pdframe.py  skl_tree.py  skl_wrapper.py  skltree.py  sklwrap.py
modsbear/dflater/: ex2df.py  ex4df.py  exenv.py  exoptim.py
modsbear/docer/: pdframe.py
modsbear/locale/: calender.py  geoenc.py  govreg.py  pronoun.py
modsbear/spanner/: dflog.py  manidf.py
ringbear/: __init__.py  biclf.py  dtyper.py  finarr.py  freqs.py  metrics.py  npam.py  numeric.py  pdchain.py  pdler.py  scier.py  sortable.py  tsarr.py  unifier.py
ringbear/talib/: candlestick.py  momentum.py  overlap.py
ringbear/timser/: ovdd.py
src/ubears/flagbear/const/: callables.py  prods.py  tokens.py
src/ubears/flagbear/llp/: autom.py  graph.py  lex.py  parser.py  syntax.py
src/ubears/flagbear/slp/: db.py  finer.py  pdsl.py
src/ubears/flagbear/str2/: dtyper.py  dups.py  fliper.py
src/ubears/flagbear/tree/: tree.py
src/ubears/modsbear/dflater/: ex2df.py  ex4df.py  exenv.py  exoptim.py  sklwrap.py
src/ubears/modsbear/docer/: pdframe.py
src/ubears/modsbear/locale/: calender.py  geoenc.py  govreg.py  pronoun.py
src/ubears/modsbear/nn/: attention.py
src/ubears/modsbear/spanner/: dflog.py  manidf.py
src/ubears/modsbear/stats/: ahp.py  skltree.py
src/ubears/nutsbear/: attention.py  autoencoder.py  deepfm.py  diffusion.py  fixture.py  posemb.py  trainer.py  transformer.py  unet.py  vae.py
src/ubears/ringbear/: freqs.py  metrics.py  numeric.py  sortable.py
src/ubears/ringbear/talib/: candlestick.py  momentum.py  overlap.py  ptnrecog.py
src/ubears/ringbear/timser/: ovdd.py
src/ubears/suitbear/: deco.py
src/ubears/suitbear/autofin/: confagg.py  confflat.py  conftrans.py  graphagg.py
src/ubears/suitbear/candlestick/: display.py
src/ubears/suitbear/cashflow/: confagg.py  conftrans.py
src/ubears/suitbear/dirt/: crosconf.py  dfproc.py  exdf.py  flows.py
src/ubears/suitbear/kgraph/: afrels.py  display.py  gxgine.py  pbocrels.py
src/ubears/suitbear/monetary/: repayment.py
src/ubears/suitbear/pboc/: accencoder.py  confagg.py  confflat.py  conftrans.py  gotcha.py
suitbear/: crosconf.py  dflog.py  exgine.py  finer.py  finpan.py  flows.py  fxgine.py  stats.py
suitbear/autofin/: confagg.py  confflat.py  conftrans.py  graphagg.py  procedure.py
suitbear/candlestick/: display.py
suitbear/cashflow/: confagg.py  confflat.py  procedure.py
suitbear/dirt/: crosconf.py  exdf.py  flows.py
suitbear/kgraph/: afrels.py  display.py  gxgine.py  kgenum.py  pbocrels.py
suitbear/monetary/: cashflow.py  repayment.py
suitbear/pboc/: confagg.py  confflat.py  confmark.py  conftrans.py  gotcha.py  procedure.py
suitbear/stock/: display.py
tests/: conftest.py  context.py  outdated.py  test_ans_random.py  test_ans_scalar.py  test_azkaban.py  test_biclf.py  test_crosconf.py  test_dflog.py  test_dtyper.py  test_executor.py  test_exgine.py  test_fliper.py  test_freqs.py  test_grammer.py  test_graph.py  test_metrics.py  test_numeric.py  test_patterns.py  test_pdler.py  test_rule_engine.py  test_sketch.py  test_sortable.py
tests/contrib/answers/: test_ans_bits.py  test_ans_random.py  test_ans_scalar.py
tests/flagbear/: test_autom.py  test_exgine.py  test_finarr.py  test_fliper.py  test_lex.py  test_parser.py  test_syntax.py  test_tree.py
tests/flagbear/const/: test_patterns.py
tests/flagbear/llp/: test_autom.py  test_graph.py  test_lex.py  test_parser.py  test_patterns.py  test_syntax.py
tests/flagbear/slp/: test_finer.py  test_pdsl.py
tests/flagbear/str2/: test_dtyper.py  test_dups.py  test_fliper.py
tests/flagbear/tree/: test_tree.py
tests/modsbear/: test_chnwords.py  test_exgine.py  test_finpan.py  test_manidf.py  test_pdframe.py  test_skl_tree.py  test_skltree.py
tests/modsbear/dflater/: test_ex2df.py  test_ex4df.py
tests/modsbear/docer/: test_pdframe.py
tests/modsbear/locale/: test_geoenc.py
tests/modsbear/spanner/: test_dflog.py  test_manidf.py
tests/modsbear/stats/: test_ahq.py  test_skltree.py
tests/pkgs/: test_npf.py  test_numpy.py  test_pandas.py  test_scipy.py  test_sklearn.py
tests/pkgs/torch/: test_attn.py  test_device.py  test_nested.py
tests/ringbear/: test_finarr.py  test_sortable.py  test_tsarr.py
tests/ringbear/talib/: test_candlestick.py  test_momentum.py  test_overlap.py
tests/ringbear/timser/: test_ovdd.py
tests/suitbear/: test_crosconf.py  test_dflog.py  test_finer.py  test_finpan.py  test_flows.py  test_fxgine.py  test_stats.py
tests/suitbear/dirt/: test_flows.py
tests/suitbear/monetary/: test_repayment.py
tests/ubears/nutsbear/: test_attention.py  test_autoencoder.py  test_deepfm.py  test_diffusion.py  test_fixture.py  test_posemb.py  test_trainer.py  test_transformer.py  test_unet.py  test_vae.py
tests/ubears/ringbear/: test_freqs.py  test_metrics.py  test_numeric.py  test_sortable.py
(+34 files in other folders)
