[project]
name = "ubears"
dynamic = [
	"version",
]
authors = [
	{name = "UBeaRLy", email = "ubearly@outlook.com"},
]
description = "A project for collecting some tricks."
long_description_content_type = "text/x-rst"
long_description = "README.md"
readme = { file = "README.md", content-type = "text/plain" }
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Intended Audience :: Financial and Insurance Industry",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]
license-files = [ "license.txt" ]
requires-python = ">= 3.10"
dependencies = [
	"numpy >= 1.2, <= 2.4",
	"scipy >= 1.10, <= 1.16",
	"pandas >= 1.4, <= 2.4",
	"openpyxl >= 3.0",
	"tqdm >= 4.0",
	"SQLAlchemy >= 1.4",
	"chinese_calendar",
	"pdfplumber",
	"jieba",
]
[project.optional-dependencies]
extra = [
	# "importlib-resources; python_version < '3.9'",
	"scikit-learn >= 1.1, <= 1.8",
	"pyecharts >= 2.0",
	"xgboost",
	"TA-lib",
	"numpy_financial",
	"PyMySQL",
	"networkx",
]
torch = [
	"torch >= 2.0",
	"torchvision",
	"tensorboard",
	"torch-directml >= 0.2.5.dev",
]

[project.urls]
homepage = "https://github.com/xyy15926/aki7"

# Build with setuptools.
# [build-system]
# build-backend = "setuptools.build_meta"
# requires = [ "setuptools >= 60.0" ]

# [tool.setuptools]
# package-dir = {"" = "src"}
# include-package-data = false

# [tool.setuptools.dynamic]
# version = { attr = "ubears.__version__" }

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["ubears*"]
# exclude = []
# namespaces = false

# [tool.setuptools.package-data]
# ubears = [ "*.csv", "*.txt" ]
# "ubears.data" = [ "*" ]

# Build with hatcling
# Hatchling ref:
# - https://hatch.pypa.io/latest/config/build/
[build-system]
build-backend = "hatchling.build"
requires = [
	"hatchling"
]

[tool.hatch.version]
path = "src/ubears/__init__.py"

[tool.hatch.build]
skip-excluded-dirs = true
directory = "dist"
# Directories that should be included in the development environment.
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.sdist]
# 1. Merge all files under `sources` together, just like searching paths.
sources = [ "src" ]
ignore-vcs = false
include = [
	"src/ubears/**/*.py",
	"src/ubears/**/*.csv",
	"src/ubears/**/*.txt",
]
exclude = []

# 1. `wheel` will be build `sdist`, so `packages` should skip the `src` if
#   `sdist.sources` is specified properly. But `wheel.sources` will still
#   require the `src/****` to specify the packages.
# 2. The children pacakges will be packaged recursively, which is different
#   from the `setuptools`.
[tool.hatch.build.targets.wheel]
packages = [ "ubears" ]
# `artifacts` is semantically equivalent to `include` but not affected by
# `exclude`.
# But `"!"` could be used to excluded more generic items in `artifacts`.
artifacts = [
	"src/**/*.so",
	"src/**/*.dll",
]
# Include other files besides `.py` and `artifacts` in packages.
only-packages = false

# Ruff ref:
# - https://docs.astral.ac.cn/ruff/linter/
# - https://docs.astral.ac.cn/ruff/configuration/
[tool.ruff]
include = [
	"pyproject.toml",
	"pixi.toml",
	"src/**/*.py",
	"scripts/**/*.py",
	"examples/**/*.py",
	"contrib/**/*.py",
]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
# select = ["E4", "E7", "E9", "F"]
select = ["E", "F", "B"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
exclude = ["*.ipynb"]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
